V0.8.16
---------
 * A new key for drawng spin indicators vertically inside the spin line-edit.

V0.8.15
---------
 * Added the possibility of having high contrast between the colors of buttons, toolbars and menubars, on the one hand, and generic containers, on the other hand.
 * Fixed the text color of K3b's location bar when there's a high contrast between the window and toolbar text colors.
 * Yet another workaround when there isn't enough space for icon-only toolbuttons with menu.
 * Added optional floating tabs (see Theme-Making.pdf).
 * Workaround for lack of space in spinboxes.
 * Don't give the button text colors to those plasma toolbuttons that pretend to have only icons but have texts.
 * Use Plasma foreground color for Plasma toolbutton text.
 * Set limits on lineedit frame size when needed.
 * Set limits on pushbutton sizes inside a view-item.
 * A better criterion for deciding if a widget belongs to Plasma.
 * Force the (push and tool) button text colors.
 * Don't set the text color of Plasma menu titles to that of their menus when they aren't transparent.
 * Use gray values of colors for checking their contrast.
 * Force view-item text colors when item text is added as a label (as in VLC).
 * Always return to qApp colors when no valid color is defined.
 * Distinguish between the toggled and pressed arrow states if a toggled down arrow element exists.
 * Solved the problem of styled toolbuttons that have no panel and aren't auto-raised.

V0.8.14
---------
 * Distinguish between the focus and normal states of generic frames only if the frame focus elements exist.
 * Consider blurring for Qt5 Konsole.
 * Made Kvantum Manager see commas in the theme comment.

V0.8.13
---------
 * Use transformations inside the SVG image to reduce memory footprint.
 * Set limits on combobox sizes where there isn't enough space.
 * Fixed combobox focus state.